test/1.4/errors/T_EPRAGMA.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// no error
/*% COVERITY irrelevant %*/

/// ERROR EPRAGMA
/*% coverity irrelevant %*/

/// ERROR EPRAGMA
/*% MYVERYCOOLPRAGMA %*/

/// ERROR EPRAGMA
/*% 😀 %*/

/// ERROR EPRAGMA
/*%
  MYVERYCOOLPRAGMA%*/

// no error (parses as a pragma)
/*%
  COVERITY
  irrelevant%*/

// no error (doesn't parse as a pragma)
/*% %*/

// no error (doesn't parse as a pragma)
/*% MYVERYCOOLPRAGMA % */

// no error (doesn't parse as a pragma)
//% MYVERYCOOLPRAGMA
